Refactor MovieInfo